lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    THEN

Grammar

Rule 0     S' -> statements_list
Rule 1     number -> INTNUM
Rule 2     number -> FLOATNUM
Rule 3     matrix_el -> ID [ number , number ]
Rule 4     expression -> ID
Rule 5     expression -> number
Rule 6     expression -> STRING
Rule 7     table -> expression , expression
Rule 8     table -> table , expression
Rule 9     expression -> [ expression ]
Rule 10    expression -> [ table ]
Rule 11    expression -> ZEROES ( number )
Rule 12    expression -> EYE ( number )
Rule 13    expression -> ONES ( number )
Rule 14    expression -> - expression
Rule 15    expression -> expression + expression
Rule 16    expression -> expression - expression
Rule 17    expression -> expression * expression
Rule 18    expression -> expression / expression
Rule 19    expression -> expression DOTADD expression
Rule 20    expression -> expression DOTSUB expression
Rule 21    expression -> expression DOTMLP expression
Rule 22    expression -> expression DOTDIV expression
Rule 23    expression -> expression TRANSPOSE
Rule 24    expression -> expression EQ expression
Rule 25    expression -> expression NE expression
Rule 26    expression -> expression > expression
Rule 27    expression -> expression GOE expression
Rule 28    expression -> expression < expression
Rule 29    expression -> expression LOE expression
Rule 30    range -> expression : expression
Rule 31    instruction -> ID = expression ;
Rule 32    instruction -> ID SUBASSIGN expression ;
Rule 33    instruction -> ID ADDASSIGN expression ;
Rule 34    instruction -> ID MLPASSIGN expression ;
Rule 35    instruction -> ID DIVASSIGN expression ;
Rule 36    instruction -> matrix_el = expression ;
Rule 37    instruction -> matrix_el SUBASSIGN expression ;
Rule 38    instruction -> matrix_el ADDASSIGN expression ;
Rule 39    instruction -> matrix_el MLPASSIGN expression ;
Rule 40    instruction -> matrix_el DIVASSIGN expression ;
Rule 41    statements_list -> statements_list code_block
Rule 42    statements_list -> statements_list instruction
Rule 43    statements_list -> instruction code_block
Rule 44    statements_list -> instruction instruction
Rule 45    code_block -> expression ;
Rule 46    code_block -> { statements_list }
Rule 47    code_block -> { instruction }
Rule 48    instruction -> BREAK ;
Rule 49    instruction -> CONTINUE ;
Rule 50    instruction -> FOR ID = range code_block
Rule 51    instruction -> FOR ID = range instruction
Rule 52    instruction -> WHILE ( expression ) code_block
Rule 53    instruction -> WHILE ( expression ) instruction
Rule 54    instruction -> IF ( expression ) code_block
Rule 55    instruction -> IF ( expression ) code_block else_block
Rule 56    else_block -> ELSE code_block
Rule 57    instruction -> PRINT table ;
Rule 58    instruction -> PRINT expression ;
Rule 59    instruction -> RETURN ;
Rule 60    instruction -> RETURN expression ;

Terminals, with rules where they appear

(                    : 11 12 13 52 53 54 55
)                    : 11 12 13 52 53 54 55
*                    : 17
+                    : 15
,                    : 3 7 8
-                    : 14 16
/                    : 18
:                    : 30
;                    : 31 32 33 34 35 36 37 38 39 40 45 48 49 57 58 59 60
<                    : 28
=                    : 31 36 50 51
>                    : 26
ADDASSIGN            : 33 38
BREAK                : 48
CONTINUE             : 49
DIVASSIGN            : 35 40
DOTADD               : 19
DOTDIV               : 22
DOTMLP               : 21
DOTSUB               : 20
ELSE                 : 56
EQ                   : 24
EYE                  : 12
FLOATNUM             : 2
FOR                  : 50 51
GOE                  : 27
ID                   : 3 4 31 32 33 34 35 50 51
IF                   : 54 55
INTNUM               : 1
LOE                  : 29
MLPASSIGN            : 34 39
NE                   : 25
ONES                 : 13
PRINT                : 57 58
RETURN               : 59 60
STRING               : 6
SUBASSIGN            : 32 37
THEN                 : 
TRANSPOSE            : 23
WHILE                : 52 53
ZEROES               : 11
[                    : 3 9 10
]                    : 3 9 10
error                : 
{                    : 46 47
}                    : 46 47

Nonterminals, with rules where they appear

code_block           : 41 43 50 52 54 55 56
else_block           : 55
expression           : 7 7 8 9 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 32 33 34 35 36 37 38 39 40 45 52 53 54 55 58 60
instruction          : 42 43 44 44 47 51 53
matrix_el            : 36 37 38 39 40
number               : 3 3 5 11 12 13
range                : 50 51
statements_list      : 41 42 46 0
table                : 8 10 57

Parsing method: LALR

state 0

    (0) S' -> . statements_list
    (41) statements_list -> . statements_list code_block
    (42) statements_list -> . statements_list instruction
    (43) statements_list -> . instruction code_block
    (44) statements_list -> . instruction instruction
    (31) instruction -> . ID = expression ;
    (32) instruction -> . ID SUBASSIGN expression ;
    (33) instruction -> . ID ADDASSIGN expression ;
    (34) instruction -> . ID MLPASSIGN expression ;
    (35) instruction -> . ID DIVASSIGN expression ;
    (36) instruction -> . matrix_el = expression ;
    (37) instruction -> . matrix_el SUBASSIGN expression ;
    (38) instruction -> . matrix_el ADDASSIGN expression ;
    (39) instruction -> . matrix_el MLPASSIGN expression ;
    (40) instruction -> . matrix_el DIVASSIGN expression ;
    (48) instruction -> . BREAK ;
    (49) instruction -> . CONTINUE ;
    (50) instruction -> . FOR ID = range code_block
    (51) instruction -> . FOR ID = range instruction
    (52) instruction -> . WHILE ( expression ) code_block
    (53) instruction -> . WHILE ( expression ) instruction
    (54) instruction -> . IF ( expression ) code_block
    (55) instruction -> . IF ( expression ) code_block else_block
    (57) instruction -> . PRINT table ;
    (58) instruction -> . PRINT expression ;
    (59) instruction -> . RETURN ;
    (60) instruction -> . RETURN expression ;
    (3) matrix_el -> . ID [ number , number ]

    ID              shift and go to state 3
    BREAK           shift and go to state 5
    CONTINUE        shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    PRINT           shift and go to state 10
    RETURN          shift and go to state 11

    statements_list                shift and go to state 1
    instruction                    shift and go to state 2
    matrix_el                      shift and go to state 4

state 1

    (0) S' -> statements_list .
    (41) statements_list -> statements_list . code_block
    (42) statements_list -> statements_list . instruction
    (45) code_block -> . expression ;
    (46) code_block -> . { statements_list }
    (47) code_block -> . { instruction }
    (31) instruction -> . ID = expression ;
    (32) instruction -> . ID SUBASSIGN expression ;
    (33) instruction -> . ID ADDASSIGN expression ;
    (34) instruction -> . ID MLPASSIGN expression ;
    (35) instruction -> . ID DIVASSIGN expression ;
    (36) instruction -> . matrix_el = expression ;
    (37) instruction -> . matrix_el SUBASSIGN expression ;
    (38) instruction -> . matrix_el ADDASSIGN expression ;
    (39) instruction -> . matrix_el MLPASSIGN expression ;
    (40) instruction -> . matrix_el DIVASSIGN expression ;
    (48) instruction -> . BREAK ;
    (49) instruction -> . CONTINUE ;
    (50) instruction -> . FOR ID = range code_block
    (51) instruction -> . FOR ID = range instruction
    (52) instruction -> . WHILE ( expression ) code_block
    (53) instruction -> . WHILE ( expression ) instruction
    (54) instruction -> . IF ( expression ) code_block
    (55) instruction -> . IF ( expression ) code_block else_block
    (57) instruction -> . PRINT table ;
    (58) instruction -> . PRINT expression ;
    (59) instruction -> . RETURN ;
    (60) instruction -> . RETURN expression ;
    (4) expression -> . ID
    (5) expression -> . number
    (6) expression -> . STRING
    (9) expression -> . [ expression ]
    (10) expression -> . [ table ]
    (11) expression -> . ZEROES ( number )
    (12) expression -> . EYE ( number )
    (13) expression -> . ONES ( number )
    (14) expression -> . - expression
    (15) expression -> . expression + expression
    (16) expression -> . expression - expression
    (17) expression -> . expression * expression
    (18) expression -> . expression / expression
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMLP expression
    (22) expression -> . expression DOTDIV expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression > expression
    (27) expression -> . expression GOE expression
    (28) expression -> . expression < expression
    (29) expression -> . expression LOE expression
    (3) matrix_el -> . ID [ number , number ]
    (1) number -> . INTNUM
    (2) number -> . FLOATNUM

    {               shift and go to state 15
    ID              shift and go to state 16
    BREAK           shift and go to state 5
    CONTINUE        shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    PRINT           shift and go to state 10
    RETURN          shift and go to state 11
    STRING          shift and go to state 18
    [               shift and go to state 19
    ZEROES          shift and go to state 20
    EYE             shift and go to state 21
    ONES            shift and go to state 22
    -               shift and go to state 23
    INTNUM          shift and go to state 24
    FLOATNUM        shift and go to state 25

    code_block                     shift and go to state 12
    instruction                    shift and go to state 13
    expression                     shift and go to state 14
    matrix_el                      shift and go to state 4
    number                         shift and go to state 17

state 2

    (43) statements_list -> instruction . code_block
    (44) statements_list -> instruction . instruction
    (45) code_block -> . expression ;
    (46) code_block -> . { statements_list }
    (47) code_block -> . { instruction }
    (31) instruction -> . ID = expression ;
    (32) instruction -> . ID SUBASSIGN expression ;
    (33) instruction -> . ID ADDASSIGN expression ;
    (34) instruction -> . ID MLPASSIGN expression ;
    (35) instruction -> . ID DIVASSIGN expression ;
    (36) instruction -> . matrix_el = expression ;
    (37) instruction -> . matrix_el SUBASSIGN expression ;
    (38) instruction -> . matrix_el ADDASSIGN expression ;
    (39) instruction -> . matrix_el MLPASSIGN expression ;
    (40) instruction -> . matrix_el DIVASSIGN expression ;
    (48) instruction -> . BREAK ;
    (49) instruction -> . CONTINUE ;
    (50) instruction -> . FOR ID = range code_block
    (51) instruction -> . FOR ID = range instruction
    (52) instruction -> . WHILE ( expression ) code_block
    (53) instruction -> . WHILE ( expression ) instruction
    (54) instruction -> . IF ( expression ) code_block
    (55) instruction -> . IF ( expression ) code_block else_block
    (57) instruction -> . PRINT table ;
    (58) instruction -> . PRINT expression ;
    (59) instruction -> . RETURN ;
    (60) instruction -> . RETURN expression ;
    (4) expression -> . ID
    (5) expression -> . number
    (6) expression -> . STRING
    (9) expression -> . [ expression ]
    (10) expression -> . [ table ]
    (11) expression -> . ZEROES ( number )
    (12) expression -> . EYE ( number )
    (13) expression -> . ONES ( number )
    (14) expression -> . - expression
    (15) expression -> . expression + expression
    (16) expression -> . expression - expression
    (17) expression -> . expression * expression
    (18) expression -> . expression / expression
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMLP expression
    (22) expression -> . expression DOTDIV expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression > expression
    (27) expression -> . expression GOE expression
    (28) expression -> . expression < expression
    (29) expression -> . expression LOE expression
    (3) matrix_el -> . ID [ number , number ]
    (1) number -> . INTNUM
    (2) number -> . FLOATNUM

    {               shift and go to state 15
    ID              shift and go to state 16
    BREAK           shift and go to state 5
    CONTINUE        shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    PRINT           shift and go to state 10
    RETURN          shift and go to state 11
    STRING          shift and go to state 18
    [               shift and go to state 19
    ZEROES          shift and go to state 20
    EYE             shift and go to state 21
    ONES            shift and go to state 22
    -               shift and go to state 23
    INTNUM          shift and go to state 24
    FLOATNUM        shift and go to state 25

    instruction                    shift and go to state 26
    code_block                     shift and go to state 27
    expression                     shift and go to state 14
    matrix_el                      shift and go to state 4
    number                         shift and go to state 17

state 3

    (31) instruction -> ID . = expression ;
    (32) instruction -> ID . SUBASSIGN expression ;
    (33) instruction -> ID . ADDASSIGN expression ;
    (34) instruction -> ID . MLPASSIGN expression ;
    (35) instruction -> ID . DIVASSIGN expression ;
    (3) matrix_el -> ID . [ number , number ]

    =               shift and go to state 28
    SUBASSIGN       shift and go to state 29
    ADDASSIGN       shift and go to state 30
    MLPASSIGN       shift and go to state 31
    DIVASSIGN       shift and go to state 32
    [               shift and go to state 33


state 4

    (36) instruction -> matrix_el . = expression ;
    (37) instruction -> matrix_el . SUBASSIGN expression ;
    (38) instruction -> matrix_el . ADDASSIGN expression ;
    (39) instruction -> matrix_el . MLPASSIGN expression ;
    (40) instruction -> matrix_el . DIVASSIGN expression ;

    =               shift and go to state 34
    SUBASSIGN       shift and go to state 35
    ADDASSIGN       shift and go to state 36
    MLPASSIGN       shift and go to state 37
    DIVASSIGN       shift and go to state 38


state 5

    (48) instruction -> BREAK . ;

    ;               shift and go to state 39


state 6

    (49) instruction -> CONTINUE . ;

    ;               shift and go to state 40


state 7

    (50) instruction -> FOR . ID = range code_block
    (51) instruction -> FOR . ID = range instruction

    ID              shift and go to state 41


state 8

    (52) instruction -> WHILE . ( expression ) code_block
    (53) instruction -> WHILE . ( expression ) instruction

    (               shift and go to state 42


state 9

    (54) instruction -> IF . ( expression ) code_block
    (55) instruction -> IF . ( expression ) code_block else_block

    (               shift and go to state 43


state 10

    (57) instruction -> PRINT . table ;
    (58) instruction -> PRINT . expression ;
    (7) table -> . expression , expression
    (8) table -> . table , expression
    (4) expression -> . ID
    (5) expression -> . number
    (6) expression -> . STRING
    (9) expression -> . [ expression ]
    (10) expression -> . [ table ]
    (11) expression -> . ZEROES ( number )
    (12) expression -> . EYE ( number )
    (13) expression -> . ONES ( number )
    (14) expression -> . - expression
    (15) expression -> . expression + expression
    (16) expression -> . expression - expression
    (17) expression -> . expression * expression
    (18) expression -> . expression / expression
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMLP expression
    (22) expression -> . expression DOTDIV expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression > expression
    (27) expression -> . expression GOE expression
    (28) expression -> . expression < expression
    (29) expression -> . expression LOE expression
    (1) number -> . INTNUM
    (2) number -> . FLOATNUM

    ID              shift and go to state 46
    STRING          shift and go to state 18
    [               shift and go to state 19
    ZEROES          shift and go to state 20
    EYE             shift and go to state 21
    ONES            shift and go to state 22
    -               shift and go to state 23
    INTNUM          shift and go to state 24
    FLOATNUM        shift and go to state 25

    table                          shift and go to state 44
    expression                     shift and go to state 45
    number                         shift and go to state 17

state 11

    (59) instruction -> RETURN . ;
    (60) instruction -> RETURN . expression ;
    (4) expression -> . ID
    (5) expression -> . number
    (6) expression -> . STRING
    (9) expression -> . [ expression ]
    (10) expression -> . [ table ]
    (11) expression -> . ZEROES ( number )
    (12) expression -> . EYE ( number )
    (13) expression -> . ONES ( number )
    (14) expression -> . - expression
    (15) expression -> . expression + expression
    (16) expression -> . expression - expression
    (17) expression -> . expression * expression
    (18) expression -> . expression / expression
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMLP expression
    (22) expression -> . expression DOTDIV expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression > expression
    (27) expression -> . expression GOE expression
    (28) expression -> . expression < expression
    (29) expression -> . expression LOE expression
    (1) number -> . INTNUM
    (2) number -> . FLOATNUM

    ;               shift and go to state 47
    ID              shift and go to state 46
    STRING          shift and go to state 18
    [               shift and go to state 19
    ZEROES          shift and go to state 20
    EYE             shift and go to state 21
    ONES            shift and go to state 22
    -               shift and go to state 23
    INTNUM          shift and go to state 24
    FLOATNUM        shift and go to state 25

    expression                     shift and go to state 48
    number                         shift and go to state 17

state 12

    (41) statements_list -> statements_list code_block .

    {               reduce using rule 41 (statements_list -> statements_list code_block .)
    ID              reduce using rule 41 (statements_list -> statements_list code_block .)
    BREAK           reduce using rule 41 (statements_list -> statements_list code_block .)
    CONTINUE        reduce using rule 41 (statements_list -> statements_list code_block .)
    FOR             reduce using rule 41 (statements_list -> statements_list code_block .)
    WHILE           reduce using rule 41 (statements_list -> statements_list code_block .)
    IF              reduce using rule 41 (statements_list -> statements_list code_block .)
    PRINT           reduce using rule 41 (statements_list -> statements_list code_block .)
    RETURN          reduce using rule 41 (statements_list -> statements_list code_block .)
    STRING          reduce using rule 41 (statements_list -> statements_list code_block .)
    [               reduce using rule 41 (statements_list -> statements_list code_block .)
    ZEROES          reduce using rule 41 (statements_list -> statements_list code_block .)
    EYE             reduce using rule 41 (statements_list -> statements_list code_block .)
    ONES            reduce using rule 41 (statements_list -> statements_list code_block .)
    -               reduce using rule 41 (statements_list -> statements_list code_block .)
    INTNUM          reduce using rule 41 (statements_list -> statements_list code_block .)
    FLOATNUM        reduce using rule 41 (statements_list -> statements_list code_block .)
    $end            reduce using rule 41 (statements_list -> statements_list code_block .)
    }               reduce using rule 41 (statements_list -> statements_list code_block .)


state 13

    (42) statements_list -> statements_list instruction .

    {               reduce using rule 42 (statements_list -> statements_list instruction .)
    ID              reduce using rule 42 (statements_list -> statements_list instruction .)
    BREAK           reduce using rule 42 (statements_list -> statements_list instruction .)
    CONTINUE        reduce using rule 42 (statements_list -> statements_list instruction .)
    FOR             reduce using rule 42 (statements_list -> statements_list instruction .)
    WHILE           reduce using rule 42 (statements_list -> statements_list instruction .)
    IF              reduce using rule 42 (statements_list -> statements_list instruction .)
    PRINT           reduce using rule 42 (statements_list -> statements_list instruction .)
    RETURN          reduce using rule 42 (statements_list -> statements_list instruction .)
    STRING          reduce using rule 42 (statements_list -> statements_list instruction .)
    [               reduce using rule 42 (statements_list -> statements_list instruction .)
    ZEROES          reduce using rule 42 (statements_list -> statements_list instruction .)
    EYE             reduce using rule 42 (statements_list -> statements_list instruction .)
    ONES            reduce using rule 42 (statements_list -> statements_list instruction .)
    -               reduce using rule 42 (statements_list -> statements_list instruction .)
    INTNUM          reduce using rule 42 (statements_list -> statements_list instruction .)
    FLOATNUM        reduce using rule 42 (statements_list -> statements_list instruction .)
    $end            reduce using rule 42 (statements_list -> statements_list instruction .)
    }               reduce using rule 42 (statements_list -> statements_list instruction .)


state 14

    (45) code_block -> expression . ;
    (15) expression -> expression . + expression
    (16) expression -> expression . - expression
    (17) expression -> expression . * expression
    (18) expression -> expression . / expression
    (19) expression -> expression . DOTADD expression
    (20) expression -> expression . DOTSUB expression
    (21) expression -> expression . DOTMLP expression
    (22) expression -> expression . DOTDIV expression
    (23) expression -> expression . TRANSPOSE
    (24) expression -> expression . EQ expression
    (25) expression -> expression . NE expression
    (26) expression -> expression . > expression
    (27) expression -> expression . GOE expression
    (28) expression -> expression . < expression
    (29) expression -> expression . LOE expression

    ;               shift and go to state 49
    +               shift and go to state 50
    -               shift and go to state 51
    *               shift and go to state 52
    /               shift and go to state 53
    DOTADD          shift and go to state 54
    DOTSUB          shift and go to state 55
    DOTMLP          shift and go to state 56
    DOTDIV          shift and go to state 57
    TRANSPOSE       shift and go to state 58
    EQ              shift and go to state 59
    NE              shift and go to state 60
    >               shift and go to state 61
    GOE             shift and go to state 62
    <               shift and go to state 63
    LOE             shift and go to state 64


state 15

    (46) code_block -> { . statements_list }
    (47) code_block -> { . instruction }
    (41) statements_list -> . statements_list code_block
    (42) statements_list -> . statements_list instruction
    (43) statements_list -> . instruction code_block
    (44) statements_list -> . instruction instruction
    (31) instruction -> . ID = expression ;
    (32) instruction -> . ID SUBASSIGN expression ;
    (33) instruction -> . ID ADDASSIGN expression ;
    (34) instruction -> . ID MLPASSIGN expression ;
    (35) instruction -> . ID DIVASSIGN expression ;
    (36) instruction -> . matrix_el = expression ;
    (37) instruction -> . matrix_el SUBASSIGN expression ;
    (38) instruction -> . matrix_el ADDASSIGN expression ;
    (39) instruction -> . matrix_el MLPASSIGN expression ;
    (40) instruction -> . matrix_el DIVASSIGN expression ;
    (48) instruction -> . BREAK ;
    (49) instruction -> . CONTINUE ;
    (50) instruction -> . FOR ID = range code_block
    (51) instruction -> . FOR ID = range instruction
    (52) instruction -> . WHILE ( expression ) code_block
    (53) instruction -> . WHILE ( expression ) instruction
    (54) instruction -> . IF ( expression ) code_block
    (55) instruction -> . IF ( expression ) code_block else_block
    (57) instruction -> . PRINT table ;
    (58) instruction -> . PRINT expression ;
    (59) instruction -> . RETURN ;
    (60) instruction -> . RETURN expression ;
    (3) matrix_el -> . ID [ number , number ]

    ID              shift and go to state 3
    BREAK           shift and go to state 5
    CONTINUE        shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    PRINT           shift and go to state 10
    RETURN          shift and go to state 11

    statements_list                shift and go to state 65
    instruction                    shift and go to state 66
    matrix_el                      shift and go to state 4

state 16

    (31) instruction -> ID . = expression ;
    (32) instruction -> ID . SUBASSIGN expression ;
    (33) instruction -> ID . ADDASSIGN expression ;
    (34) instruction -> ID . MLPASSIGN expression ;
    (35) instruction -> ID . DIVASSIGN expression ;
    (4) expression -> ID .
    (3) matrix_el -> ID . [ number , number ]

    =               shift and go to state 28
    SUBASSIGN       shift and go to state 29
    ADDASSIGN       shift and go to state 30
    MLPASSIGN       shift and go to state 31
    DIVASSIGN       shift and go to state 32
    ;               reduce using rule 4 (expression -> ID .)
    +               reduce using rule 4 (expression -> ID .)
    -               reduce using rule 4 (expression -> ID .)
    *               reduce using rule 4 (expression -> ID .)
    /               reduce using rule 4 (expression -> ID .)
    DOTADD          reduce using rule 4 (expression -> ID .)
    DOTSUB          reduce using rule 4 (expression -> ID .)
    DOTMLP          reduce using rule 4 (expression -> ID .)
    DOTDIV          reduce using rule 4 (expression -> ID .)
    TRANSPOSE       reduce using rule 4 (expression -> ID .)
    EQ              reduce using rule 4 (expression -> ID .)
    NE              reduce using rule 4 (expression -> ID .)
    >               reduce using rule 4 (expression -> ID .)
    GOE             reduce using rule 4 (expression -> ID .)
    <               reduce using rule 4 (expression -> ID .)
    LOE             reduce using rule 4 (expression -> ID .)
    [               shift and go to state 33


state 17

    (5) expression -> number .

    ;               reduce using rule 5 (expression -> number .)
    +               reduce using rule 5 (expression -> number .)
    -               reduce using rule 5 (expression -> number .)
    *               reduce using rule 5 (expression -> number .)
    /               reduce using rule 5 (expression -> number .)
    DOTADD          reduce using rule 5 (expression -> number .)
    DOTSUB          reduce using rule 5 (expression -> number .)
    DOTMLP          reduce using rule 5 (expression -> number .)
    DOTDIV          reduce using rule 5 (expression -> number .)
    TRANSPOSE       reduce using rule 5 (expression -> number .)
    EQ              reduce using rule 5 (expression -> number .)
    NE              reduce using rule 5 (expression -> number .)
    >               reduce using rule 5 (expression -> number .)
    GOE             reduce using rule 5 (expression -> number .)
    <               reduce using rule 5 (expression -> number .)
    LOE             reduce using rule 5 (expression -> number .)
    ,               reduce using rule 5 (expression -> number .)
    ]               reduce using rule 5 (expression -> number .)
    )               reduce using rule 5 (expression -> number .)
    :               reduce using rule 5 (expression -> number .)
    {               reduce using rule 5 (expression -> number .)
    ID              reduce using rule 5 (expression -> number .)
    BREAK           reduce using rule 5 (expression -> number .)
    CONTINUE        reduce using rule 5 (expression -> number .)
    FOR             reduce using rule 5 (expression -> number .)
    WHILE           reduce using rule 5 (expression -> number .)
    IF              reduce using rule 5 (expression -> number .)
    PRINT           reduce using rule 5 (expression -> number .)
    RETURN          reduce using rule 5 (expression -> number .)
    STRING          reduce using rule 5 (expression -> number .)
    [               reduce using rule 5 (expression -> number .)
    ZEROES          reduce using rule 5 (expression -> number .)
    EYE             reduce using rule 5 (expression -> number .)
    ONES            reduce using rule 5 (expression -> number .)
    INTNUM          reduce using rule 5 (expression -> number .)
    FLOATNUM        reduce using rule 5 (expression -> number .)


state 18

    (6) expression -> STRING .

    ;               reduce using rule 6 (expression -> STRING .)
    +               reduce using rule 6 (expression -> STRING .)
    -               reduce using rule 6 (expression -> STRING .)
    *               reduce using rule 6 (expression -> STRING .)
    /               reduce using rule 6 (expression -> STRING .)
    DOTADD          reduce using rule 6 (expression -> STRING .)
    DOTSUB          reduce using rule 6 (expression -> STRING .)
    DOTMLP          reduce using rule 6 (expression -> STRING .)
    DOTDIV          reduce using rule 6 (expression -> STRING .)
    TRANSPOSE       reduce using rule 6 (expression -> STRING .)
    EQ              reduce using rule 6 (expression -> STRING .)
    NE              reduce using rule 6 (expression -> STRING .)
    >               reduce using rule 6 (expression -> STRING .)
    GOE             reduce using rule 6 (expression -> STRING .)
    <               reduce using rule 6 (expression -> STRING .)
    LOE             reduce using rule 6 (expression -> STRING .)
    ,               reduce using rule 6 (expression -> STRING .)
    ]               reduce using rule 6 (expression -> STRING .)
    )               reduce using rule 6 (expression -> STRING .)
    :               reduce using rule 6 (expression -> STRING .)
    {               reduce using rule 6 (expression -> STRING .)
    ID              reduce using rule 6 (expression -> STRING .)
    BREAK           reduce using rule 6 (expression -> STRING .)
    CONTINUE        reduce using rule 6 (expression -> STRING .)
    FOR             reduce using rule 6 (expression -> STRING .)
    WHILE           reduce using rule 6 (expression -> STRING .)
    IF              reduce using rule 6 (expression -> STRING .)
    PRINT           reduce using rule 6 (expression -> STRING .)
    RETURN          reduce using rule 6 (expression -> STRING .)
    STRING          reduce using rule 6 (expression -> STRING .)
    [               reduce using rule 6 (expression -> STRING .)
    ZEROES          reduce using rule 6 (expression -> STRING .)
    EYE             reduce using rule 6 (expression -> STRING .)
    ONES            reduce using rule 6 (expression -> STRING .)
    INTNUM          reduce using rule 6 (expression -> STRING .)
    FLOATNUM        reduce using rule 6 (expression -> STRING .)


state 19

    (9) expression -> [ . expression ]
    (10) expression -> [ . table ]
    (4) expression -> . ID
    (5) expression -> . number
    (6) expression -> . STRING
    (9) expression -> . [ expression ]
    (10) expression -> . [ table ]
    (11) expression -> . ZEROES ( number )
    (12) expression -> . EYE ( number )
    (13) expression -> . ONES ( number )
    (14) expression -> . - expression
    (15) expression -> . expression + expression
    (16) expression -> . expression - expression
    (17) expression -> . expression * expression
    (18) expression -> . expression / expression
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMLP expression
    (22) expression -> . expression DOTDIV expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression > expression
    (27) expression -> . expression GOE expression
    (28) expression -> . expression < expression
    (29) expression -> . expression LOE expression
    (7) table -> . expression , expression
    (8) table -> . table , expression
    (1) number -> . INTNUM
    (2) number -> . FLOATNUM

    ID              shift and go to state 46
    STRING          shift and go to state 18
    [               shift and go to state 19
    ZEROES          shift and go to state 20
    EYE             shift and go to state 21
    ONES            shift and go to state 22
    -               shift and go to state 23
    INTNUM          shift and go to state 24
    FLOATNUM        shift and go to state 25

    expression                     shift and go to state 67
    table                          shift and go to state 68
    number                         shift and go to state 17

state 20

    (11) expression -> ZEROES . ( number )

    (               shift and go to state 69


state 21

    (12) expression -> EYE . ( number )

    (               shift and go to state 70


state 22

    (13) expression -> ONES . ( number )

    (               shift and go to state 71


state 23

    (14) expression -> - . expression
    (4) expression -> . ID
    (5) expression -> . number
    (6) expression -> . STRING
    (9) expression -> . [ expression ]
    (10) expression -> . [ table ]
    (11) expression -> . ZEROES ( number )
    (12) expression -> . EYE ( number )
    (13) expression -> . ONES ( number )
    (14) expression -> . - expression
    (15) expression -> . expression + expression
    (16) expression -> . expression - expression
    (17) expression -> . expression * expression
    (18) expression -> . expression / expression
    (19) expression -> . expression DOTADD expression
    (20) expression -> . expression DOTSUB expression
    (21) expression -> . expression DOTMLP expression
    (22) expression -> . expression DOTDIV expression
    (23) expression -> . expression TRANSPOSE
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression > expression
    (27) expression -> . expression GOE expression
    (28) expression -> . expression < expression
    (29) expression -> . expression LOE expression
    (1) number -> . INTNUM
    (2) number -> . FLOATNUM

    ID              shift and go to state 46
    STRING          shift and go to state 18
    [               shift and go to state 19
    ZEROES          shift and go to state 20
    EYE             shift and go to state 21
    ONES            shift and go to state 22
    -               shift and go to state 23
    INTNUM          shift and go to state 24
    FLOATNUM        shift and go to state 25

    expression                     shift and go to state 72
    number                         shift and go to state 17

state 24

    (1) number -> INTNUM .
